# form

./: INSTALL  configure.ac
.github/actions/setup-build/: action.yml
.github/workflows/: deploy.yml  stale.yml  test.yml
check/: Makefile.am  README.md  check.rb  coverage.frm  examples.frm  features.frm  fixes.frm  polynomial.frm  user.frm
check/extra/: fmft.frm  forcer.frm  mzv-dm.frm  z-fmft.frm
doc/manual/: float.tex  gamma.tex  statements.tex
sources/: Makefile.am  checkpoint.c  comexpr.c  compcomm.c  declare.h  diagrams.c  diawrap.cc  dollar.c  evaluate.c  execute.c  factor.c  flintinterface.cc  flintinterface.h  flintwrap.cc  float.c  form3.h  ftypes.h  grcc.cc  grccparam.h  if.c  message.c  minos.c  model.c  module.c  names.c  normal.c  parallel.c  polywrap.cc  pre.c  proces.c  ratio.c  reken.c  reshuf.c  setfile.c  sort.c  startup.c  store.c  structs.h  threads.c  tools.c  (+2 more)
